--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
       <div class="wrapper">
         <div class="title">Наши направления</div>
         <div class="menu">
-          <div class="menu__phone-active-item show">Все страны</div>
+          <div class="menu__phone-active-item">Все страны</div>
           <ul class="menu__list">
             
             <li class="menu__list-item " id="all"><a>Все страны</a></li>
@@ -27,10 +27,11 @@
             <li class="menu__list-item " id="turkey">Турция</li>
             <li class="menu__list-item " id="spain">Испания</li>
             <li class="menu__list-item " id="portugal">Португалия</li>
-            
+            <!--
             <div class="menu__phone-arrow-active">
               <img src="images/arrow.svg" alt="">
             </div>
+          -->
           </ul>
           <div class="menu__phone-arrow">
             <img src="images/arrow.svg" alt="">
