--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
       <div class="slider-wrap">
         <div class="swiper-container">
           <div class="swiper-wrapper">
-            <div class="swiper-slide italy">
+            <div class="swiper-slide" country="italy">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-1.jpg);">
                 <div class="swiper-slide__sity">Милан</div>
                 <div class="swiper-slide__country">Италия</div>
@@ -56,7 +56,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide greece">
+            <div class="swiper-slide" country="greece">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-7.jpg);">
                 <div class="swiper-slide__sity">Афины</div>
                 <div class="swiper-slide__country">Греция</div>
@@ -71,7 +71,7 @@
               </div>
             </div>
             
-            <div class="swiper-slide germany">
+            <div class="swiper-slide" country="germany">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-2.jpg);">
                 <div class="swiper-slide__sity">Фрайбург</div>
                 <div class="swiper-slide__country">Германия</div>
@@ -86,7 +86,7 @@
               </div>
             </div>
           
-            <div class="swiper-slide turkey">
+            <div class="swiper-slide" country="turkey">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-8.jpg);">
                 <div class="swiper-slide__sity">Каш</div>
                 <div class="swiper-slide__country">Турция</div>
@@ -100,7 +100,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide portugal">
+            <div class="swiper-slide" country="portugal">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-3.jpg);">
                 <div class="swiper-slide__sity">Лиссабон</div>
                 <div class="swiper-slide__country">Португалия</div>
@@ -115,7 +115,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide spain">
+            <div class="swiper-slide" country="spain">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-9.jpg);">
                 <div class="swiper-slide__sity">Мадрид</div>
                 <div class="swiper-slide__country">Испания</div>
@@ -129,7 +129,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide italy">
+            <div class="swiper-slide italy" country="italy">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-4.jpg);">
                 <div class="swiper-slide__sity">Виченца</div>
                 <div class="swiper-slide__country">Италия</div>
@@ -143,7 +143,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide germany">
+            <div class="swiper-slide" country="germany">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-10.jpg);">
                 <div class="swiper-slide__sity">Берлин</div>
                 <div class="swiper-slide__country">Германия</div>
@@ -157,7 +157,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide spain">
+            <div class="swiper-slide" country="spain">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-5.jpg);">
                 <div class="swiper-slide__sity">Барселона</div>
                 <div class="swiper-slide__country">Испания</div>
@@ -171,7 +171,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide turkey">
+            <div class="swiper-slide" country="turkey">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-11.jpg);">
                 <div class="swiper-slide__sity">Анталия</div>
                 <div class="swiper-slide__country">Турция</div>
@@ -185,7 +185,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide portugal">
+            <div class="swiper-slide" country="portugal">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-6.jpg);">
                 <div class="swiper-slide__sity">Порту</div>
                 <div class="swiper-slide__country">Португалия</div>
@@ -199,7 +199,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide italy ">
+            <div class="swiper-slide" country="italy">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-12.jpg);">
                 <div class="swiper-slide__sity">Венеция</div>
                 <div class="swiper-slide__country">Италия</div>
@@ -213,7 +213,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide italy">
+            <div class="swiper-slide" country="italy">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-13.jpg);">
                 <div class="swiper-slide__sity">Генуя</div>
                 <div class="swiper-slide__country">Италия</div>
@@ -227,7 +227,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide portugal">
+            <div class="swiper-slide" country="portugal">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-16.jpg);">
                 <div class="swiper-slide__sity">Гуарда</div>
                 <div class="swiper-slide__country">Португалия</div>
@@ -241,7 +241,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide spain">
+            <div class="swiper-slide" country="spain">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-14.jpg);">
                 <div class="swiper-slide__sity">Валенсия</div>
                 <div class="swiper-slide__country">Испания</div>
@@ -255,7 +255,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide italy">
+            <div class="swiper-slide" country="italy">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-17.jpg);">
                 <div class="swiper-slide__sity">Падуя</div>
                 <div class="swiper-slide__country">Италия</div>
@@ -269,7 +269,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide greece">
+            <div class="swiper-slide" country="greece">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-15.jpg);">
                 <div class="swiper-slide__sity">Салоники</div>
                 <div class="swiper-slide__country">Греция</div>
@@ -283,7 +283,7 @@
                 <button class="swiper-slide__btn">Подробнее</button>
               </div>
             </div>
-            <div class="swiper-slide turkey">
+            <div class="swiper-slide" country="turkey">
               <div class="swiper-slide__img" style="background-image: url(images/gallery-18.jpg);">
                 <div class="swiper-slide__sity">Стамбул</div>
                 <div class="swiper-slide__country">Турция</div>
