--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
                 <div class="swiper-slide__country">Италия</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -62,6 +63,7 @@
                 <div class="swiper-slide__country">Греция</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -77,6 +79,7 @@
                 <div class="swiper-slide__country">Германия</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -92,6 +95,7 @@
                 <div class="swiper-slide__country">Турция</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -106,6 +110,7 @@
                 <div class="swiper-slide__country">Португалия</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -121,6 +126,7 @@
                 <div class="swiper-slide__country">Испания</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -135,6 +141,7 @@
                 <div class="swiper-slide__country">Италия</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -149,6 +156,7 @@
                 <div class="swiper-slide__country">Германия</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -163,6 +171,7 @@
                 <div class="swiper-slide__country">Испания</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -177,6 +186,7 @@
                 <div class="swiper-slide__country">Турция</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -191,6 +201,7 @@
                 <div class="swiper-slide__country">Португалия</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -205,6 +216,7 @@
                 <div class="swiper-slide__country">Италия</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -219,6 +231,7 @@
                 <div class="swiper-slide__country">Италия</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -233,6 +246,7 @@
                 <div class="swiper-slide__country">Португалия</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -247,6 +261,7 @@
                 <div class="swiper-slide__country">Испания</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -261,6 +276,7 @@
                 <div class="swiper-slide__country">Италия</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -275,6 +291,7 @@
                 <div class="swiper-slide__country">Греция</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
@@ -289,6 +306,7 @@
                 <div class="swiper-slide__country">Турция</div>
               </div>
               <div class="swiper-slide__descr">
+                <div class="swiper-slide__close-btn"></div>
                 <div class="swiper-slide__text">
                   Фрайбург-им-Брайсгау – оживленный университетский город в горах Шварцвальд
                   на юго-западе Германии, известный своим умеренным климатом и восстановленным после войны средневековым
